# src/main/java/com/sethhaskellcondie/thegamepensieveapi/domain/customfield/CustomFieldOption.java
@@ -1,4 +1,4 @@
 package com.sethhaskellcondie.thegamepensieveapi.domain.customfield;
 
-public record CustomFieldOption(int id, int customFieldId, String name, boolean isDefault) {
+public record CustomFieldOption(int id, int customFieldId, String name, boolean isDefault, int order) {
 }
