# src/main/java/com/sethhaskellcondie/thegamepensieveapi/domain/customfield/CustomFieldOptionDto.java
@@ -1,0 +1,4 @@
+package com.sethhaskellcondie.thegamepensieveapi.domain.customfield;
+
+public record CustomFieldOptionDto(Integer id, String name, int order, boolean isDefault) {
+}
