# src/main/java/com/sethhaskellcondie/thegamepensieveapi/domain/customfield/CustomFieldOptionRequestDto.java
@@ -1,4 +1,0 @@
-package com.sethhaskellcondie.thegamepensieveapi.domain.customfield;
-
-public record CustomFieldOptionRequestDto(String name) {
-}
