# src/main/java/com/sethhaskellcondie/thegamepensieveapi/domain/customfield/CustomFieldUpdateRequestDto.java
@@ -1,0 +1,6 @@
+package com.sethhaskellcondie.thegamepensieveapi.domain.customfield;
+
+import java.util.List;
+
+public record CustomFieldUpdateRequestDto(String name, int order, List<CustomFieldOptionDto> options) {
+}
